--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -152,6 +152,7 @@
         \resumeItemListEnd
         \resumeItemHeading{Shield}{Digital tool to help employers collect, manage and verify proof of vaccination of their employees.}
         \resumeItemListStart
+        % Hundreds of thousands of private and public sector employees.
           \resumeItem{This is a test}
         \resumeItemListEnd
         % \resumeItemHeading{ClinicFlow}{End-to-end software solution for institutions to run paperless mass immunization campaigns. Licensed by the Nova Scotia Health Authority to run their COVID-19 campaign among other institutions. }
@@ -274,10 +275,9 @@
     \small{\item{
      \textbf{Languages}{: Typescript, SQL (Postgres), JavaScript, HTML/CSS} \\
      \textbf{Frameworks}{: React, React Native, Express, Node.js, Jest } \\
-     \textbf{Developer Tools}{: Git, CircleCI, Terraform, GitHub Actions, Jenkins, Docker, AWS, XCode, Lerna } \\
-     \textbf{Libraries}{: Typeorm, Ant Design } \\
-    %  \textbf{Concepts}{: FHIR, OIDC } \\
-     \textbf{Others}{: Elastic Beanstalk, RDS, ElastiCache, Redis, Docker, EC2, Terraform }
+     \textbf{Developer Tools}{: Git, CircleCI, GitHub Actions, Jenkins, Docker, AWS, XCode, Lerna } \\
+     \textbf{infrastructure}{: Elastic Beanstalk, RDS, ElastiCache, EC2, Terraform } \\
+     \textbf{Libraries and Others}{: Typeorm, Ant Design, Redis, Docker } \\
     }}
  \end{itemize}
 
