Even more WIP (wow)

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -136,21 +136,25 @@
       {Full Stack Software Engineer}{April 2021 -- Nov 2023}
       {CANImmunize}{Remote}
       \resumeItemListStart
-        \resumeItemHeading{VaxRecordNS}{Allows the residents of Nova Scotia to access their's and their dependent's vaccination records.}
+        \resumeItemHeading{VaxRecordNS}{Allows the residents of Nova Scotia to access their vaccination records.}
         \resumeItemListStart
           % \resumeItem{Developed as part of a multi-vendor collaborative effort to centralize the provinces' health data}
           \resumeItem{Collaborated closely with multiple vendors as part of a wider effort to centralize the province's health data.}
           % \resumeItem{Developed web and mobile applications using React and React Native that consume a FHIR CDR with millions of patient's records.}
-          \resumeItem{Headed the developement of a React web app that consumes a FHIR CDR with millions of patient's records.}
+          \resumeItem{Lead the developement of a React web application that interfaces with a governmental OIDC identy provider and a FHIR data repository storing the vaccination records of 1M+ patients.}
+          % TODO: reword this
           \resumeItem{Developed a React Native mobile application equivalent to the web application.}
-          \resumeItem{Designed serverless services that allow users to manage their dependents and generate official downloadable vaccinations records using AWS Lambda, Twilio, and Redis.}
-          % \resumeItem{Created a serverless feature flag services that allows for immediate feature toggling.}
-          % \resumeItem{Authentication and authorization using OpenID Connect.}
-          \resumeItem{Set up CI/CD pipelines to build, and deploy the applications to AWS with CircleCI.}
-          \resumeItem{Managed the project's AWS infrastructure using Terraform.}
+          \resumeItem{Designed scalable serverless services that allow users to manage their dependents and generate official downloadable vaccinations records using AWS Lambda, Twilio, and Redis.}
+          % \resumeItem{Created a feature flag service that allows for immediate feature toggling accross apps.}
+          % Uptime stuff and dashboards
+          \resumeItem{Conducted code reviews of peers and mentored junior developers.}
+          \resumeItem{Created dashboards and alerts to monitor the health of the applications using AWS Canary, CloudWatch and Slack integrations.}
+          \resumeItem{Set up CI/CD pipelines to build, and deploy the applications with CircleCI.}
+          \resumeItem{Managed the project's infrastructure using Terraform.}
           % \resumeItem{Built with: Typescript, React, React Native, Redis, AWS Lambda, and CircleCI}
         \resumeItemListEnd
         \resumeItemHeading{Shield}{Digital tool to help employers collect, manage and verify proof of vaccination of their employees.}
+          \resumeItem{Participated in the interview, hiring, and onboarding of co-op students.}
         \resumeItemListStart
         % Hundreds of thousands of private and public sector employees.
           \resumeItem{This is a test}
@@ -162,13 +166,16 @@
           % \resumeItem{Developed performant web and mobile applications that handle the forecasting, booking, and vaccination of millions of patients for clients like the Nova Scotia Health Authority to run their COVID-19 and flu campaigns.}
           % \resumeItem{Developed a performant React web app licensed by the Nova Scotia Health Authority to run their COVID-19 campaign.}
           \resumeItem{Rapidly expended the vaccination forecasting system to support new COVID-19 guideliness.}
+          \resumeItem{Headed deployments involving data major migrations, and infrastructure changes.}
+          \resumeItem{Participated in the interview, hiring, and onboarding of co-op students.}
+          % \resumeItem{}
           % \resumeItem{Vaccine interchangeability work}
-          \resumeItem{Solved major incidents that jeopardized provincial COVID-19 vaccination campaigns as the on-call engineer.}
+          \resumeItem{Solved critical incidents as the on-call engineer.}
           % \resumeItem{Built with: Typescript, React, PostgreSQL, AWS Elastic Beanstalk, AWS RDS, Redis, Jenkins, Lerna, and Typeorm}
         \resumeItemListEnd
-        \resumeItemHeading{Canadian Vaccine Catalogue}{Comprehensive, standards-based, source-of-truth for vaccine terminology and vaccine product information in Canada.}
+        \resumeItemHeading{Canadian Vaccine Catalogue (CVC)}{Comprehensive, standards-based, source-of-truth for vaccine terminology and vaccine product information in Canada.}
         \resumeItemListStart
-          \resumeItem{Maintened a catalogue of thousands of vaccines, diseases and lot numbers made available as an npm package, website, and HL7 FHIR API running on AWS EC2.}
+          \resumeItem{Solely responsible for maintaining a catalogue with 100K+ entries made available as an npm package, web app, and HL7 FHIR API running on AWS EC2.}
           \resumeItem{Released new versions of the CVC with data provided by Health Canada on a biweekly basis using Jenkins.}
           % \resumeItem{Built with: Typescript, AWS EC2, Jenkins, and Lerna}
         \resumeItemListEnd
@@ -211,7 +218,7 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Sheridan College}{Aug. 2019 -- Dec 2020}
+      {Sheridan College}{Dec 2020}
       {Ontario College Diploma, Computer Systems Technician - Software Engineering}{Oakville, ON}
       \resumeItemListStart
         \resumeItem{High Honours recipient }
