--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -145,28 +145,28 @@
           % TODO: reword this
           \resumeItem{Developed a React Native mobile application equivalent to the web application.}
           \resumeItem{Designed scalable serverless services that allow users to manage their dependents and generate official downloadable vaccinations records using AWS Lambda, Twilio, and Redis.}
+          \resumeItem{Conducted code reviews of peers and mentored junior developers.}
           % \resumeItem{Created a feature flag service that allows for immediate feature toggling accross apps.}
           % Uptime stuff and dashboards
-          \resumeItem{Conducted code reviews of peers and mentored junior developers.}
           \resumeItem{Created dashboards and alerts to monitor the health of the applications using AWS Canary, CloudWatch and Slack integrations.}
-          \resumeItem{Set up CI/CD pipelines to build, and deploy the applications with CircleCI.}
+          \resumeItem{Set up CI/CD pipelines to build and deploy the applications with CircleCI.}
           \resumeItem{Managed the project's infrastructure using Terraform.}
           % \resumeItem{Built with: Typescript, React, React Native, Redis, AWS Lambda, and CircleCI}
         \resumeItemListEnd
         \resumeItemHeading{Shield}{Digital tool to help employers collect, manage and verify proof of vaccination of their employees.}
-          \resumeItem{Participated in the interview, hiring, and onboarding of co-op students.}
         \resumeItemListStart
         % Hundreds of thousands of private and public sector employees.
-          \resumeItem{This is a test}
+          \resumeItem{150K+ employees accross public and private sectors at peak utilization.}
+          \resumeItem{Implemented suggestions from external cybersecurity audits to become SOC 2 complaint.}
         \resumeItemListEnd
         % \resumeItemHeading{ClinicFlow}{End-to-end software solution for institutions to run paperless mass immunization campaigns. Licensed by the Nova Scotia Health Authority to run their COVID-19 campaign among other institutions. }
         \resumeItemHeading{ClinicFlow}{End-to-end software solution for institutions to run paperless mass immunization campaigns.}
         \resumeItemListStart
-          \resumeItem{Developed performant web and mobile applications with React, React Native, PostgreSQL, AWS EBS, and AWS RDS that handle the forecasting, booking, logging, and proof of vaccination of millions of Canadians.}
+          \resumeItem{Developed performant web and mobile applications with React, React Native, PostgreSQL, AWS EBS, and AWS RDS that handle the forecasting, booking, logging, and proof of vaccination of 1M+ Canadians.}
           % \resumeItem{Developed performant web and mobile applications that handle the forecasting, booking, and vaccination of millions of patients for clients like the Nova Scotia Health Authority to run their COVID-19 and flu campaigns.}
           % \resumeItem{Developed a performant React web app licensed by the Nova Scotia Health Authority to run their COVID-19 campaign.}
           \resumeItem{Rapidly expended the vaccination forecasting system to support new COVID-19 guideliness.}
-          \resumeItem{Headed deployments involving data major migrations, and infrastructure changes.}
+          \resumeItem{Headed deployments involving major data migrations and infrastructure changes.}
           \resumeItem{Participated in the interview, hiring, and onboarding of co-op students.}
           % \resumeItem{}
           % \resumeItem{Vaccine interchangeability work}
@@ -175,7 +175,7 @@
         \resumeItemListEnd
         \resumeItemHeading{Canadian Vaccine Catalogue (CVC)}{Comprehensive, standards-based, source-of-truth for vaccine terminology and vaccine product information in Canada.}
         \resumeItemListStart
-          \resumeItem{Solely responsible for maintaining a catalogue with 100K+ entries made available as an npm package, web app, and HL7 FHIR API running on AWS EC2.}
+          \resumeItem{Solely responsible for maintaining a catalogue with 100K+ records made available as an npm package, web app, and HL7 FHIR API running on AWS EC2.}
           \resumeItem{Released new versions of the CVC with data provided by Health Canada on a biweekly basis using Jenkins.}
           % \resumeItem{Built with: Typescript, AWS EC2, Jenkins, and Lerna}
         \resumeItemListEnd
