Updated relay project

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -74,7 +74,7 @@
 
 
 \newcommand{\resumeItemHeading}[2]{
-  \item\small{
+  \vspace{4pt}\item\small{
     {\textbf{#1}: #2 \vspace{-2pt}}
   }
 }
@@ -157,6 +157,7 @@
         \resumeItemListStart
         % Hundreds of thousands of private and public sector employees.
           \resumeItem{150K+ employees accross public and private sectors at peak utilization.}
+          \resumeItem{Participated in the interview, hiring, and onboarding of co-op students.}
           \resumeItem{Implemented suggestions from external cybersecurity audits to become SOC 2 complaint.}
         \resumeItemListEnd
         % \resumeItemHeading{ClinicFlow}{End-to-end software solution for institutions to run paperless mass immunization campaigns. Licensed by the Nova Scotia Health Authority to run their COVID-19 campaign among other institutions. }
@@ -167,7 +168,6 @@
           % \resumeItem{Developed a performant React web app licensed by the Nova Scotia Health Authority to run their COVID-19 campaign.}
           \resumeItem{Rapidly expended the vaccination forecasting system to support new COVID-19 guideliness.}
           \resumeItem{Headed deployments involving major data migrations and infrastructure changes.}
-          \resumeItem{Participated in the interview, hiring, and onboarding of co-op students.}
           % \resumeItem{}
           % \resumeItem{Vaccine interchangeability work}
           \resumeItem{Solved critical incidents as the on-call engineer.}
@@ -233,10 +233,7 @@
       \resumeProjectHeading
           {\textbf{@es-romo/relay} $|$ \emph{ Typescript, WebSockets, Lerna, Jest, GitHub Actions }}{Nov 2023 -- Present}
           \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
+            \resumeItem{Relay server and client that allows for P2P-like traffic using WebSockets for turn-based browser games.}
           \resumeItemListEnd
       %  \resumeProjectHeading
       %     {\textbf{Brainf**k compiler} $|$ \emph{ Zig, WebAssembly, Javascript }}{Nov 2023 -- Present}
