Update relay project

--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -231,7 +231,7 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{@es-romo/relay} $|$ \emph{ Typescript, WebSockets, Lerna, Jest, GitHub Actions }}{Nov 2023 -- Present}
+          {\textbf{@es-romo/relay} $|$ \emph{ Typescript, WebSockets, Fastify, Lerna, Jest, GitHub Actions }}{Nov 2023 -- Present}
           \resumeItemListStart
             \resumeItem{Relay server and client that allows for P2P-like traffic using WebSockets for turn-based browser games.}
           \resumeItemListEnd
