--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -61,12 +61,6 @@
 \pdfgentounicode=1
 
 %-------------------------
-% Custom commands
-% \newcommand{\resumeItem}[1]{
-%   \item\small{
-%     {#1 \vspace{-2pt}}
-%   }
-% }
 
 \newcommand{\resumeItem}[1]{
   \item\small{#1}
@@ -115,16 +109,12 @@
 \begin{document}
 
 %----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
-
 \begin{center}
     \textbf{\Huge \scshape Esteban Romo} \\ \vspace{1pt}
-    \small 437-344-0898 $|$ \href{mailto:esteban.romo.esparza@gmail.com}{\underline{esteban.romo.esparza@gmail.com}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/es-romo}{\underline{github.com/es-romo}}
+    \href{https://github.com/es-romo}{\underline{github.com/es-romo}} $|$ 
+    \href{mailto:esteban.romo.esparza@gmail.com}{\underline{esteban.romo.esparza@gmail.com}} $|$ 
+    \href{https://www.linkedin.com/in/esteban-romo/}{\underline{linkedin.com/in/esteban-romo}} $|$ 
+    \small +1-437-344-0898
 \end{center}
 
 
@@ -138,78 +128,35 @@
       \resumeItemListStart
         \resumeItemHeading{VaxRecordNS}{Allows the residents of Nova Scotia to access their vaccination records.}
         \resumeItemListStart
-          % \resumeItem{Developed as part of a multi-vendor collaborative effort to centralize the provinces' health data}
           \resumeItem{Collaborated closely with multiple vendors as part of a wider effort to centralize the province's health data.}
-          % \resumeItem{Developed web and mobile applications using React and React Native that consume a FHIR CDR with millions of patient's records.}
-          \resumeItem{Lead the developement of a React web application that interfaces with a governmental OIDC identy provider and a FHIR data repository storing the vaccination records of 1M+ patients.}
-          % TODO: reword this
-          \resumeItem{Developed a React Native mobile application equivalent to the web application.}
+          \resumeItem{Developed web and mobile apps using React, React Native, and Typescript that interface with a governmental OIDC identy provider and a FHIR data repository storing the vaccination records of 1M+ patients.}
           \resumeItem{Designed scalable serverless services that allow users to manage their dependents and generate official downloadable vaccinations records using AWS Lambda, Twilio, and Redis.}
-          \resumeItem{Conducted code reviews of peers and mentored junior developers.}
-          % \resumeItem{Created a feature flag service that allows for immediate feature toggling accross apps.}
-          % Uptime stuff and dashboards
-          \resumeItem{Created dashboards and alerts to monitor the health of the applications using AWS Canary, CloudWatch and Slack integrations.}
+          \resumeItem{Created dashboards and alerts to monitor the health of the applications with AWS CloudWatch and Slack integrations.}
           \resumeItem{Set up CI/CD pipelines to build and deploy the applications with CircleCI.}
           \resumeItem{Managed the project's infrastructure using Terraform.}
-          % \resumeItem{Built with: Typescript, React, React Native, Redis, AWS Lambda, and CircleCI}
         \resumeItemListEnd
         \resumeItemHeading{Shield}{Digital tool to help employers collect, manage and verify proof of vaccination of their employees.}
         \resumeItemListStart
-        % Hundreds of thousands of private and public sector employees.
-          \resumeItem{150K+ employees accross public and private sectors at peak utilization.}
+          % TODO: reword this
+          \resumeItem{Developed a SaaS solution with Typescript, React, and PostgreSQL that handled PHI of up to 150K+ employees accross public and private sectors.}
           \resumeItem{Participated in the interview, hiring, and onboarding of co-op students.}
+          \resumeItem{Conducted code reviews of peers and mentored junior developers.}
+          % \resumeItem{Set up CI/CD pipelines to build and deploy the applications with CircleCI.}
           \resumeItem{Implemented suggestions from external cybersecurity audits to become SOC 2 complaint.}
         \resumeItemListEnd
-        % \resumeItemHeading{ClinicFlow}{End-to-end software solution for institutions to run paperless mass immunization campaigns. Licensed by the Nova Scotia Health Authority to run their COVID-19 campaign among other institutions. }
         \resumeItemHeading{ClinicFlow}{End-to-end software solution for institutions to run paperless mass immunization campaigns.}
         \resumeItemListStart
-          \resumeItem{Developed performant web and mobile applications with React, React Native, PostgreSQL, AWS EBS, and AWS RDS that handle the forecasting, booking, logging, and proof of vaccination of 1M+ Canadians.}
-          % \resumeItem{Developed performant web and mobile applications that handle the forecasting, booking, and vaccination of millions of patients for clients like the Nova Scotia Health Authority to run their COVID-19 and flu campaigns.}
-          % \resumeItem{Developed a performant React web app licensed by the Nova Scotia Health Authority to run their COVID-19 campaign.}
-          \resumeItem{Rapidly expended the vaccination forecasting system to support new COVID-19 guideliness.}
-          \resumeItem{Headed deployments involving major data migrations and infrastructure changes.}
-          % \resumeItem{}
-          % \resumeItem{Vaccine interchangeability work}
-          \resumeItem{Solved critical incidents as the on-call engineer.}
-          % \resumeItem{Built with: Typescript, React, PostgreSQL, AWS Elastic Beanstalk, AWS RDS, Redis, Jenkins, Lerna, and Typeorm}
+          \resumeItem{Developed performant web and mobile applications with React, React Native, and PostgreSQL that handle the forecasting, booking, logging, and proof of vaccination of 1M+ Canadians.}
+          \resumeItem{Expanded the vaccination forecasting system to support new COVID-19 guideliness.}
+          \resumeItem{Headed deployments that major data migrations and infrastructure changes.}
+          \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer.}
         \resumeItemListEnd
         \resumeItemHeading{Canadian Vaccine Catalogue (CVC)}{Comprehensive, standards-based, source-of-truth for vaccine terminology and vaccine product information in Canada.}
         \resumeItemListStart
           \resumeItem{Solely responsible for maintaining a catalogue with 100K+ records made available as an npm package, web app, and HL7 FHIR API running on AWS EC2.}
           \resumeItem{Released new versions of the CVC with data provided by Health Canada on a biweekly basis using Jenkins.}
-          % \resumeItem{Built with: Typescript, AWS EC2, Jenkins, and Lerna}
         \resumeItemListEnd
-        % \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        % \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL, and Docker to analyze GitHub data}
-        % \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
       \resumeItemListEnd
-
-% ClinicFlow / ClinicMode: NS
-% Shield: Ottawa Public Health, 
-% VaxRecordNS / a2i / Access Too Information
-% Canimmunize public app / GSK, Pfizer
-      
-% -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
-
-    % \resumeSubheading
-    %   {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-    %   {Southwestern University}{Georgetown, TX}
-    %   \resumeItemListStart
-    %     \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-    %     \resumeItem{Developed a game in Java to test the generated dungeons}
-    %     \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-    %     \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-    %     \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-    %     \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-    %   \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
@@ -231,60 +178,23 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{@es-romo/relay} $|$ \emph{ Typescript, WebSockets, Fastify, Lerna, Jest, GitHub Actions }}{Nov 2023 -- Present}
+          {\textbf{@es-romo/relay} $|$ \emph{Typescript, Fastify, Lerna, Jest, GitHub Actions, Glitch }}{Nov 2023 -- Present}
           \resumeItemListStart
-            \resumeItem{Relay server and client that allows for P2P-like traffic using WebSockets for turn-based browser games.}
+            \resumeItem{Developing a minimal implementation of a WebSocket-based relay server and client for listen server / host architectures made available as individual npm packages.}
           \resumeItemListEnd
-      %  \resumeProjectHeading
-      %     {\textbf{Brainf**k compiler} $|$ \emph{ Zig, WebAssembly, Javascript }}{Nov 2023 -- Present}
-      %     \resumeItemListStart
-      %       \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-      %       \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-      %       \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-      %       \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-      %     \resumeItemListEnd
-      %   \resumeProjectHeading
-      %     {\textbf{royalur.io} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-      %     \resumeItemListStart
-      %       \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-      %       \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-      %       \resumeItem{Visualized GitHub data to show collaboration}
-      %       \resumeItem{Used Celery and Redis for asynchronous tasks}
-      %     \resumeItemListEnd
-
-      % \resumeProjectHeading
-      %     {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-      %     \resumeItemListStart
-      %       \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-      %       \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-      %       \resumeItem{Visualized GitHub data to show collaboration}
-      %       \resumeItem{Used Celery and Redis for asynchronous tasks}
-      %     \resumeItemListEnd
-      % \resumeProjectHeading
-      %     {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-      %     \resumeItemListStart
-      %       \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-      %       \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-      %       \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-      %       \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-      %     \resumeItemListEnd
     \resumeSubHeadingListEnd
 
-
-
-%
 %-----------SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Typescript, SQL (Postgres), JavaScript, HTML/CSS} \\
-     \textbf{Frameworks}{: React, React Native, Express, Node.js, Jest } \\
-     \textbf{Developer Tools}{: Git, CircleCI, GitHub Actions, Jenkins, Docker, AWS, XCode, Lerna } \\
-     \textbf{infrastructure}{: Elastic Beanstalk, RDS, ElastiCache, EC2, Terraform } \\
+     \textbf{Frameworks}{: React, React Native, Express, Fastify, Node.js, Jest } \\
+     \textbf{Developer Tools}{: Git, CircleCI, GitHub Actions, Jenkins, XCode, Lerna } \\
+     \textbf{Infrastructure}{: AWS, Elastic Beanstalk, RDS, ElastiCache, EC2, Terraform } \\
      \textbf{Libraries and Others}{: Typeorm, Ant Design, Redis, Docker } \\
     }}
  \end{itemize}
-
 
 %-------------------------------------------
 \end{document}
