--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -121,7 +121,6 @@
 %-----------WORK EXPERIENCE-----------
 \section{Work Experience}
   \resumeSubHeadingListStart
-
     \resumeSubheading
       {Full Stack Software Engineer}{April 2021 -- Nov 2023}
       {CANImmunize}{Remote}
@@ -129,8 +128,8 @@
         \resumeItemHeading{VaxRecordNS}{Allows the residents of Nova Scotia to access their vaccination records.}
         \resumeItemListStart
           \resumeItem{Collaborated closely with multiple vendors as part of a wider effort to centralize the province's health data.}
-          \resumeItem{Developed web and mobile apps using React, React Native, and Typescript that interface with a governmental OIDC identy provider and a FHIR data repository storing the vaccination records of 1M+ patients.}
-          \resumeItem{Designed scalable serverless services that allow users to manage their dependents and generate official downloadable vaccinations records using AWS Lambda, Twilio, and Redis.}
+          \resumeItem{Developed web and mobile apps using React, React Native, and Typescript that interface with a governmental OIDC identity provider and a FHIR data repository storing the vaccination records of 1M+ patients.}
+          \resumeItem{Designed scalable serverless services that allow users to manage their dependents and generate official downloadable vaccination records using AWS Lambda, Twilio, and Redis.}
           \resumeItem{Created dashboards and alerts to monitor the health of the applications with AWS CloudWatch and Slack integrations.}
           \resumeItem{Set up CI/CD pipelines to build and deploy the applications with CircleCI.}
           \resumeItem{Managed the project's infrastructure using Terraform.}
@@ -138,26 +137,25 @@
         \resumeItemHeading{Shield}{Digital tool to help employers collect, manage and verify proof of vaccination of their employees.}
         \resumeItemListStart
           % TODO: reword this
-          \resumeItem{Developed a SaaS solution with Typescript, React, and PostgreSQL that handled PHI of up to 150K+ employees accross public and private sectors.}
+          \resumeItem{Developed a SaaS solution with Typescript, React, and PostgreSQL that handled PHI of up to 150K+ employees across public and private sectors.}
           \resumeItem{Participated in the interview, hiring, and onboarding of co-op students.}
           \resumeItem{Conducted code reviews of peers and mentored junior developers.}
           % \resumeItem{Set up CI/CD pipelines to build and deploy the applications with CircleCI.}
-          \resumeItem{Implemented suggestions from external cybersecurity audits to become SOC 2 complaint.}
+          \resumeItem{Implemented suggestions from external cybersecurity audits to become SOC 2 compliant.}
         \resumeItemListEnd
         \resumeItemHeading{ClinicFlow}{End-to-end software solution for institutions to run paperless mass immunization campaigns.}
         \resumeItemListStart
           \resumeItem{Developed performant web and mobile applications with React, React Native, and PostgreSQL that handle the forecasting, booking, logging, and proof of vaccination of 1M+ Canadians.}
-          \resumeItem{Expanded the vaccination forecasting system to support new COVID-19 guideliness.}
+          \resumeItem{Expanded the vaccination forecasting system to support new COVID-19 guidelines.}
           \resumeItem{Headed deployments that major data migrations and infrastructure changes.}
           \resumeItem{Diagnosed, mitigated and solved critical incidents as the on-call engineer.}
         \resumeItemListEnd
         \resumeItemHeading{Canadian Vaccine Catalogue (CVC)}{Comprehensive, standards-based, source-of-truth for vaccine terminology and vaccine product information in Canada.}
         \resumeItemListStart
           \resumeItem{Solely responsible for maintaining a catalogue with 100K+ records made available as an npm package, web app, and HL7 FHIR API running on AWS EC2.}
-          \resumeItem{Released new versions of the CVC with data provided by Health Canada on a biweekly basis using Jenkins.}
+          \resumeItem{Released new versions of the CVC with data provided by Health Canada biweekly using Jenkins.}
         \resumeItemListEnd
       \resumeItemListEnd
-
   \resumeSubHeadingListEnd
 
 
