--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -164,8 +164,8 @@
       {Sheridan College}{Dec 2020}
       {Ontario College Diploma, Computer Systems Technician - Software Engineering}{Oakville, ON}
       \resumeItemListStart
-        \resumeItem{High Honours recipient }
-        \resumeItem{GPA 3.93/4.00 }
+        \resumeItem{High Honours recipient.}
+        \resumeItem{GPA 3.93/4.00.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
