--- a/EstebanRomo_Resume.tex
+++ b/EstebanRomo_Resume.tex
@@ -184,11 +184,11 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Typescript, SQL (Postgres), JavaScript, HTML/CSS} \\
-     \textbf{Frameworks}{: React, React Native, Express, Fastify, Node.js, Jest } \\
-     \textbf{Developer Tools}{: Git, CircleCI, GitHub Actions, Jenkins, XCode, Lerna } \\
-     \textbf{Infrastructure}{: AWS, Elastic Beanstalk, RDS, ElastiCache, EC2, Terraform } \\
-     \textbf{Libraries and Others}{: Typeorm, Ant Design, Redis, Docker } \\
+     \textbf{Languages}{: Typescript, SQL (Postgres), JavaScript, HTML/CSS.} \\
+     \textbf{Frameworks}{: React, React Native, Express, Fastify, Node.js, Jest.} \\
+     \textbf{Developer Tools}{: Git, CircleCI, GitHub Actions, Jenkins, XCode, Lerna.} \\
+     \textbf{Infrastructure}{: AWS, Elastic Beanstalk, RDS, ElastiCache, EC2, Terraform.} \\
+     \textbf{Libraries and Others}{: Typeorm, Ant Design, Redis, Docker.} \\
     }}
  \end{itemize}
 
